<?xml version="1.0"?>
<package format="2">
  <name>mapper_dyn_huk</name>
  <version>2.0.0</version>
  <description>
  laser dynamixel
  </description>
  <license>Apache 2.0</license>
  <author email="jacodd27@gmail.com">Jaco</author>
  <maintainer email="jacodd27@gmail.com">Jaco</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
</package>
